WebCore: Fix for: https://bugs.webkit.org/show_bug.cgi?id=49452 Placeholder should not be swapped in and out of the text control's inner text element

Reviewed by Darin Adler.

There's no need to swap the placeholder text in and out of the inner text element.  Instead, just paint the text.
This reduces complexity and makes it easier to make independent decisions about the placeholder text and the text control value.

* html/HTMLInputElement.cpp: (WebCore::HTMLInputElement::setValueFromRenderer):
Since updatePlaceholderVisibility checks the value, set the value before calling updatePlaceholderVisibility.
* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::updatePlaceholderVisibility): Remove code that set the inner text value with the placeholder text.
(WebCore::RenderTextControl::paintObject):  Paint the placeholder text during the background phase.
* rendering/RenderTextControl.h:
* rendering/RenderTextControlMultiLine.cpp:
(WebCore::RenderTextControlMultiLine::nodeAtPoint): Remove custom hit testing that tried to avoid hitting the placeholder text at the wrong time.
(WebCore::RenderTextControlMultiLine::updateFromElement):  Remove code that set the inner text value with the placeholder text.
(WebCore::RenderTextControlMultiLine::createInnerTextStyle): Remove code that created the inner text style based on the placeholder pseudoelement.
(WebCore::RenderTextControlMultiLine::textBoxInsetLeft): Added.
(WebCore::RenderTextControlMultiLine::textBoxInsetRight): Added.
* rendering/RenderTextControlMultiLine.h:
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::updateFromElement): Remove code that set the inner text value with the placeholder text.
(WebCore::RenderTextControlSingleLine::createInnerTextStyle): Remove code that created the inner text style based on the placeholder pseudoelement.
(WebCore::RenderTextControlSingleLine::textBoxInsetLeft): Added.
(WebCore::RenderTextControlSingleLine::textBoxInsetRight): Added.
* rendering/RenderTextControlSingleLine.h:
* rendering/TextControlInnerElements.cpp: Removed custom hit testing that tried to avoid hitting the placeholder text at the wrong time.

LayoutTests: Test for: https://bugs.webkit.org/show_bug.cgi?id=49452
Placeholder should not be swapped in and out of the text control's inner text element

Reviewed by Darin Adler.

The only visual change that occurred is in pseudo-cache-stale.html.  The placeholder text did not
use to paint over the spot where the cancel button will display.  Since the cancel button is not
present when the placeholder is drawn, now the placeholder text can draw to the edge of the field.

* platform/mac/fast/css/pseudo-cache-stale-expected.checksum:
* platform/mac/fast/css/pseudo-cache-stale-expected.png:
* platform/mac/fast/css/pseudo-cache-stale-expected.txt:
* platform/mac/fast/forms/isindex-placeholder-expected.txt:
* platform/mac/fast/forms/password-placeholder-expected.txt:
* platform/mac/fast/forms/password-placeholder-text-security-expected.txt:
* platform/mac/fast/forms/placeholder-pseudo-style-expected.txt:
* platform/mac/fast/forms/placeholder-set-attribute-expected.txt:
* platform/mac/fast/forms/placeholder-stripped-expected.txt:
* platform/mac/fast/forms/search-placeholder-value-changed-expected.txt:
* platform/mac/fast/forms/search-styled-expected.txt:
* platform/mac/fast/forms/textarea-placeholder-pseudo-style-expected.txt:
* platform/mac/fast/forms/textarea-placeholder-set-attribute-expected.txt:



Canonical link: https://commits.webkit.org/62520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72052 268f45cc-cd09-0410-ab3c-d52691b4dbfc