WebCore/rendering/RenderTextControlMultiLine.h
@@ -50,6 +50,8 @@ private:
 
     virtual RenderStyle* textBaseStyle() const;
     virtual PassRefPtr<RenderStyle> createInnerTextStyle(const RenderStyle* startStyle) const;
+    virtual int textBlockInsetLeft() const;
+    virtual int textBlockInsetRight() const;
 };
 
 inline RenderTextControlMultiLine* toRenderTextControlMultiLine(RenderObject* object)
