WebCore/rendering/RenderTextControlSingleLine.cpp
@@ -674,25 +674,14 @@ void RenderTextControlSingleLine::updateFromElement()
     if (m_cancelButton)
         updateCancelButtonVisibility();
 
-    if (m_placeholderVisible) {
-        // node() must be an HTMLInputElement. WMLInputElement doesn't support placeholder.
-        ASSERT(node()->isHTMLElement());
-        ExceptionCode ec = 0;
-        innerTextElement()->setInnerText(static_cast<HTMLInputElement*>(node())->strippedPlaceholder(), ec);
-        ASSERT(!ec);
-    } else {
-        if (!inputElement()->suggestedValue().isNull())
-            setInnerTextValue(inputElement()->suggestedValue());
-        else {
-            bool shouldUpdateValue = true;
-            if (node()->isHTMLElement()) {
-                // For HTMLInputElement, update the renderer value if the element
-                // supports placeholder or the formControlValueMatchesRenderer()
-                // flag is false. It protects an unacceptable renderer value from
-                // being overwritten with the DOM value.
-                shouldUpdateValue = static_cast<HTMLTextFormControlElement*>(node())->supportsPlaceholder() || !static_cast<HTMLInputElement*>(node())->formControlValueMatchesRenderer();
-            }
-            if (shouldUpdateValue)
+    if (!inputElement()->suggestedValue().isNull())
+        setInnerTextValue(inputElement()->suggestedValue());
+    else {
+        if (node()->hasTagName(inputTag)) {
+            // For HTMLInputElement, update the renderer value if the formControlValueMatchesRenderer()
+            // flag is false. It protects an unacceptable renderer value from
+            // being overwritten with the DOM value.
+            if (!static_cast<HTMLInputElement*>(node())->formControlValueMatchesRenderer())
                 setInnerTextValue(inputElement()->value());
         }
     }
@@ -708,16 +697,8 @@ void RenderTextControlSingleLine::cacheSelection(int start, int end)
 
 PassRefPtr<RenderStyle> RenderTextControlSingleLine::createInnerTextStyle(const RenderStyle* startStyle) const
 {
-    RefPtr<RenderStyle> textBlockStyle;
-    if (m_placeholderVisible) {
-        if (RenderStyle* pseudoStyle = getCachedPseudoStyle(INPUT_PLACEHOLDER))
-            textBlockStyle = RenderStyle::clone(pseudoStyle);
-    } 
-    if (!textBlockStyle) {
-        textBlockStyle = RenderStyle::create();   
-        textBlockStyle->inheritFrom(startStyle);
-    }
-
+    RefPtr<RenderStyle> textBlockStyle = RenderStyle::create();   
+    textBlockStyle->inheritFrom(startStyle);
     adjustInnerTextStyle(startStyle, textBlockStyle.get());
 
     textBlockStyle->setWhiteSpace(PRE);
@@ -739,13 +720,6 @@ PassRefPtr<RenderStyle> RenderTextControlSingleLine::createInnerTextStyle(const 
     // We're adding one extra pixel of padding to match WinIE.
     textBlockStyle->setPaddingLeft(Length(1, Fixed));
     textBlockStyle->setPaddingRight(Length(1, Fixed));
-
-    // When the placeholder is going to be displayed, temporarily override the text security to be "none".
-    // After this, updateFromElement will immediately update the text displayed.
-    // When the placeholder is no longer visible, updatePlaceholderVisiblity will reset the style, 
-    // and the text security mode will be set back to the computed value correctly.
-    if (m_placeholderVisible)
-        textBlockStyle->setTextSecurity(TSNONE);
 
     return textBlockStyle.release();
 }
@@ -1110,6 +1084,26 @@ PassRefPtr<Scrollbar> RenderTextControlSingleLine::createScrollbar(ScrollbarClie
 InputElement* RenderTextControlSingleLine::inputElement() const
 {
     return toInputElement(static_cast<Element*>(node()));
+}
+
+int RenderTextControlSingleLine::textBlockInsetLeft() const
+{
+    int inset = borderLeft() + clientPaddingLeft();
+    if (HTMLElement* innerText = innerTextElement()) {
+        if (RenderBox* innerTextRenderer = innerText->renderBox())
+            inset += innerTextRenderer->paddingLeft();
+    }
+    return inset;
+}
+    
+int RenderTextControlSingleLine::textBlockInsetRight() const
+{
+    int inset = borderRight() + clientPaddingRight();
+    if (HTMLElement* innerText = innerTextElement()) {
+        if (RenderBox* innerTextRenderer = innerText->renderBox())
+            inset += innerTextRenderer->paddingRight();
+    }
+    return inset;
 }
 
 }
